# miniChat

./: README.md
backend/: README.md  pyproject.toml
backend/src/backend/: settings.py  urls.py
frontend/: README.md  bun.lockb
