[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "v_wangzhipeng02", email = "v_wangzhipeng02@baidu.com" }
]
dependencies = [
    "djangorestframework>=3.15.1",
    "django==4.2.11",
    "django-cors-headers>=4.3.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 120


[tool.ruff.format]
# description = "https://docs.astral.sh/ruff/settings/#format_quote-style"
quote-style = "double"
#indent-style = "tab" 使用tab缩进
docstring-code-format = true
skip-magic-trailing-comma = true

